fixed smooth scroll on mobile

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -62,6 +62,7 @@
     flex-direction: column;
     margin-bottom: 10vh;
     gap: 100px;
+    padding-top: 20px;
 }
 .main > * {
     /* border: 1px solid red; */
